# dx-cli

./: AI_IMPLEMENTATION.md  Cargo.toml  PROJECT_STATUS.md  QUICKSTART.md  README.md  SHELL_ENHANCEMENTS.md  deny.toml  dx.bash  rustfmt.toml
.cargo/: config.toml
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci.yml  release.yml  security.yml
assets/: banner.txt
crates/dx-ai/: Cargo.toml
crates/dx-ai/src/: lib.rs
crates/dx-ai/src/agents/: executor.rs  memory.rs  mod.rs  orchestrator.rs
crates/dx-ai/src/context/: manager.rs  mod.rs
crates/dx-ai/src/dxp/: mod.rs  protocol.rs  resources.rs  tools.rs  transport.rs
crates/dx-ai/src/friday/: client.rs  mod.rs  models.rs  streaming.rs
crates/dx-ai/src/gemini/: client.rs  mod.rs  models.rs  streaming.rs
crates/dx-auth/: Cargo.toml
crates/dx-auth/src/: lib.rs
crates/dx-cli/: Cargo.toml
crates/dx-cli/src/: banner.rs  lib.rs  main.rs
crates/dx-cli/src/cli/: args.rs  completions.rs  mod.rs
crates/dx-cli/src/cli/commands/: mod.rs
crates/dx-core/: Cargo.toml
crates/dx-core/src/: error.rs  lib.rs  types.rs  utils.rs
crates/dx-core/src/config/: loader.rs  mod.rs  schema.rs  validation.rs
crates/dx-fonts/: Cargo.toml
crates/dx-fonts/src/: lib.rs
crates/dx-forge/: Cargo.toml
crates/dx-forge/src/: lib.rs
crates/dx-forge/src/orchestrator/: mod.rs
crates/dx-forge/src/package/: mod.rs
crates/dx-forge/src/vcs/: mod.rs
crates/dx-generator/: Cargo.toml
crates/dx-generator/src/: engine.rs  lib.rs
crates/dx-generator/src/generators/: mod.rs
crates/dx-generator/src/templates/: loader.rs  mod.rs  registry.rs
crates/dx-i18n/: Cargo.toml
crates/dx-i18n/src/: lib.rs
crates/dx-icons/: Cargo.toml
crates/dx-icons/src/: lib.rs
crates/dx-lsp/: Cargo.toml
crates/dx-lsp/src/: lib.rs
crates/dx-media/: Cargo.toml
crates/dx-media/src/: lib.rs
crates/dx-shell/: Cargo.toml  README.md
crates/dx-shell/src/: lib.rs
crates/dx-shell/src/autocomplete/: mod.rs
crates/dx-shell/src/hooks/: demo.sh  dx-shell-commands.sh  dx-shell-init.sh  dx-shell-memory.sh  install.sh  mod.rs
crates/dx-shell/src/intelligence/: mod.rs
crates/dx-shell/src/memory/: mod.rs
crates/dx-style/: Cargo.toml
crates/dx-style/src/: lib.rs
crates/dx-tui/: Cargo.toml
crates/dx-tui/src/: app.rs  chat.rs  events.rs  lib.rs
crates/dx-tui/src/components/: banner.rs  chat.rs  command_palette.rs  file_browser.rs  mod.rs  progress.rs  status_bar.rs
crates/dx-tui/src/layouts/: mod.rs
crates/dx-tui/src/themes/: mod.rs
crates/dx-ui/: Cargo.toml
crates/dx-ui/src/: lib.rs
docs/: AI_CHAT.md  architecture.md
integrations/: README.md
playground/: README.md
xtask/src/: main.rs
